--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Startup Employee Directory</title>
     <!-- style sheets -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -12,4 +16,11 @@ DOCTYPE html>
     <header>
         <h1>Portfolio for Lisa Campi Walters</h1>
     </header>
-    <p>Hello World!</p>
+
+    <div class="animate1">
+    <p>Hi!</p>
+    </div>
+
+    <div class="animate2">
+        <p>I'm Lisa Campi Walters, a Front End Developer</p>
+    </div>
