added and image

--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Startup Employee Directory</title>
+    <title>Portfolio for Lisa Campi Walters</title>
     <!-- style sheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="navbar">
+        <nav class="nav"></nav>
+    </div>
     <header>
         <h1>Portfolio for Lisa Campi Walters</h1>
     </header>
 
-    <div class="animate1">
+    <div class="hi">
     <p>Hi!</p>
     </div>
 
-    <div class="animate2">
+    <div class="lisa">
         <p>I'm Lisa Campi Walters, a Front End Developer</p>
     </div>
+    
+    <div class="portfolioPic">
+    </div>
+
+</body>
+</html>
