--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Portfolio for Lisa Campi Walters</title>
     <!-- style sheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,24 +14,59 @@
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<!-- 
+=================================================================================== -->
 <body>
     <div class="navbar">
-        <nav class="nav"></nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg fixed-top">
+            <div class="container">
+              <a class="navbar-brand order-1 mr-0" target="_blank">Welcome to my Webpage!</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navabar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-item nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-item nav-link" href="#about">About</a>
+                  <a class="nav-item nav-link" href="#skills">Speakers</a>
+                  <a class="nav-item nav-link" href="#projects">Schedule</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+        <nav class="nav">
     </div>
-    <header>
-        <h1>Portfolio for Lisa Campi Walters</h1>
-    </header>
 
-    <div class="hi">
-    <p>Hi!</p>
+    <!-- =============================================================================================================== -->
+    <div class="opening">
+          
+            <div class="hi">
+                <p>Hi!</p>
+            </div>
+
+            <div class="lisa">
+                <p>I'm Lisa Campi Walters, a Front End Developer</p>
+            </div>
+
+            <div class="portfolioPic">
+            </div>
     </div>
 
-    <div class="lisa">
-        <p>I'm Lisa Campi Walters, a Front End Developer</p>
-    </div>
-    
-    <div class="portfolioPic">
-    </div>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
+    <div class="next">
+        <p>I am a recent student of the Team Treehouse Front End Tech Degree</p>
+
+
+
+
+
+
+
+
+
+
+    </div><!--This is the end of the main page .bodyBackground -->
 
 </body>
 </html>
